--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "nodemon": "^2.0.4",
+    "prompts": "^2.3.2",
     "simple-peer": "^9.2.1",
     "socket.io": "^2.2.0"
   },
